--- a/include/css/styles.css
+++ b/include/css/styles.css
@@ -19,26 +19,29 @@ a:visited {
 
 header {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
 }
 
 #bandeau {
     border: solid 1px black;
     height: 120px;
-    width: 92.11%;
+    width: 100%;
     text-align: center;
     font-size: 150%;
+    position: relative;
 }
 
 .logo {
     height: 120px;
     width: 120px;
     border: solid 1px black;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 nav {
     border: solid 1px black;
-    height: 60px;
     width: 100%;
     margin-top: 0.5%;
 }
@@ -60,6 +63,8 @@ li {
     margin: 0 0.1%;
     text-align: center;
     color: black;
+    font-size: 17px;
+    padding: 20px;
 }
 
 li:hover {
